# complet

./: README.md
fullproject/: db.sqlite3  manage.py  requirements.txt
fullproject/Main/: factory.py  middleware.py  models.py  urlsmain.py  views.py
fullproject/Main/migrations/: 0001_initial.py  0002_student.py  0003_staff.py  0004_produit_studentprofil_staffprofil.py  0005_remove_produit_image.py  0006_remove_produit_quantite.py
fullproject/fullproject/: asgi.py  settings.py  urls.py  wsgi.py
fullproject/omzo/: LICENSE  pyproject.toml  requirements.txt
fullproject/omzo/riffo_query_inspector.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
